--- a/.editorconfig
+++ b/.editorconfig
@@ -13,6 +13,7 @@ trim_trailing_whitespace = true
 [*.md]
 insert_final_newline = false
 trim_trailing_whitespace = false
+indent_style = space
 
 [*.yml]
 indent_style = spaces
