--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "mocha": "^5.2.0",
     "rollup": "^0.66.2",
     "rollup-plugin-babel": "^4.0.3",
-    "rollup-plugin-buble": "^0.19.2",
+    "rollup-plugin-buble": "^0.19.2"
+  },
+  "dependencies": {
     "theo": "^8.0.0-beta.2"
   }
 }
