--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "rollup -c",
     "pretest": "npm run build",
-    "test": "mocha test/*.js --require @babel/register",
+    "test": "mocha test/*.js --require @babel/register --exit",
     "prepublish": "npm test"
   },
   "files": [
@@ -24,15 +24,15 @@
   },
   "homepage": "https://github.com/mindthetic/rollup-plugin-theo#readme",
   "devDependencies": {
-    "@babel/core": "^7.1.0",
+    "@babel/core": "^7.2.2",
     "@babel/register": "^7.0.0",
     "coffeescript": "^2.3.2",
     "mocha": "^5.2.0",
-    "rollup": "^0.66.2",
-    "rollup-plugin-babel": "^4.0.3",
-    "rollup-plugin-buble": "^0.19.2"
+    "rollup": "^1.1.2",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-buble": "^0.19.6"
   },
   "dependencies": {
-    "theo": "^8.0.0-beta.2"
+    "theo": "^8.1.1"
   }
 }
