--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-  "name": "rollup-plugin-theo",
-  "version": "2.0.1",
-  "author": "Gavin McFarland",
-  "description": "A rollup plugin to transform design tokens using Theo",
-  "main": "dist/rollup-plugin-theo.js",
-  "jsnext:main": "dist/rollup-plugin-theo.mjs",
-  "repository": "mindthetic/rollup-plugin-theo",
-  "scripts": {
-    "build": "rollup -c",
-    "pretest": "npm run build",
-    "test": "mocha test/*.js --require @babel/register --exit",
-    "prepublish": "npm test"
-  },
-  "files": [
-    "dist"
-  ],
-  "keywords": [
-    "rollup-plugin"
-  ],
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mindthetic/rollup-plugin-theo/issues"
-  },
-  "homepage": "https://github.com/mindthetic/rollup-plugin-theo#readme",
-  "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/register": "^7.0.0",
-    "coffeescript": "^2.3.2",
-    "mocha": "^5.2.0",
-    "rollup": "^1.1.2",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-buble": "^0.19.6"
-  },
-  "dependencies": {
-    "theo": "^8.1.1"
-  }
+	"name": "rollup-plugin-theo",
+	"version": "2.0.1",
+	"author": "Gavin McFarland",
+	"description": "A rollup plugin to transform design tokens using Theo",
+	"main": "dist/rollup-plugin-theo.js",
+	"jsnext:main": "dist/rollup-plugin-theo.mjs",
+	"repository": "limitlessloop/rollup-plugin-theo",
+	"scripts": {
+		"build": "rollup -c",
+		"pretest": "npm run build",
+		"test": "mocha test/*.js --require @babel/register --exit",
+		"prepublish": "npm test"
+	},
+	"files": [
+		"dist"
+	],
+	"keywords": [
+		"rollup-plugin"
+	],
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/mindthetic/rollup-plugin-theo/issues"
+	},
+	"homepage": "https://github.com/mindthetic/rollup-plugin-theo#readme",
+	"devDependencies": {
+		"@babel/core": "^7.5.4",
+		"@babel/register": "^7.4.4",
+		"@babel/preset-env": "^7.5.4",
+		"coffeescript": "^2.3.2",
+		"mocha": "^5.2.0",
+		"rollup": "^1.17.0",
+		"rollup-plugin-babel": "^4.3.3",
+		"rollup-plugin-buble": "^0.19.8"
+	},
+	"dependencies": {
+		"theo": "^8.1.3"
+	}
 }
